# secops-project

./: .bandit  .gitignore  README.md  pyproject.toml
.github/workflows/: secops.yml
core/: settings.py
